# shitposting-webapp

./: Cargo.toml
src/: main.rs  player.rs  session.rs
static/: style.css
templates/: error.html  host.html  index.html  join.html  player.html
