[package]
name = "shitposting-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
askama = "0.12.1"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
